ipc/ipdl/test/ipdl/ok/array_Union.ipdl
union Union {
    int[];
    int;
    double;
};

sync protocol array_Union {
parent:
    sync Msg(Union u, Union[] au) returns (Union r);
};
