ipc/ipdl/test/ipdl/error/PExtendedAttrRepeated.ipdl
//error: Repeated extended attribute `RefCounted'

[RefCounted, RefCounted] async protocol PExtendedAttrRepeated {
parent:
    async Msg();
};
